--- a/Forms (1).html
+++ b/Forms (1).html
@@ -60,6 +60,15 @@
             
            
           }
+
+             window.addEventListener("DOMContentLoaded",() => {
+              axios.get("https://crudcrud.com/api/56645184e8b340b4acc121e8dd23ff1e/mydata")
+              .then((userDetails)=>{
+              for(let i=0;i<userDetails.data.length;i++){
+                    showNewUseronScreen(userDetails.data[i])
+                }
+              })
+             })
             function showNewUseronScreen(user){
              const d=document.getElementById('ul')
              const li= `<li id="${user.Email}"> ${user.Name} - ${user.Email} - ${user.Number} - ${user.Date} - ${user.Time} 
